# consilium

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  run_demo.py  test_eval_suite.py
.github/workflows/: ci.yml
consilium/: __init__.py  capability.py  composer.py  compute.py  embed.py  hardening.py  integrity.py  module.py  registry.py  router.py
eval/: cases.json  eval.py  eval_baseline.py  eval_core.py  eval_v2.py  eval_v3.py  run_all.py
modules/handbook/: descriptor.json
modules/handbook/corpus/: expense_policy.md  pto_policy.md  security_policy.md
modules/legal/: descriptor.json
modules/legal/corpus/: gdpr_summary.md  msa_terms.md  nda_template.md
modules/markets/: descriptor.json
modules/markets/corpus/: acme_10k.md  globex_earnings.md  market_glossary.md
