[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consilium"
version = "1.0.0"
description = "A multi-RAG switchboard: subject-routed, citation-bound answers with abstention. Self-contained, deterministic, offline."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools]
packages = ["consilium"]
